--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <img src="https://i.imgur.com/8cx0Nks.png" alt="Lemongrass Logo" class="logo" />
+    <img src="https://imgur.com/AxQrnUV.png" alt="Lemongrass Logo" class="logo" />
     <nav>
       <a href="#shop">Shop</a>
       <a href="#about">About</a>
