--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <section class="products" id="shop">
     <div class="product-card" id="tshirt">
-      <img src="https://imgur.com/l4lGJDi.png" alt="T-Shirt">
+      <img src="https://imgur.com/a/6449jrT.png" alt="T-Shirt">
       <h3>Classic T-Shirt</h3>
       <p>Premium heavyweight cotton. Bold design.</p>
       <p class="price">RM89</p>
