--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <a href="https://toyyibpay.com/link-bayaran-tshirt" target="_blank" class="btn">Pre-Order</a>
     </div>
     <div class="product-card" id="hoodie">
-      <img src="https://imgur.com/6dhiks6.png" alt="Hoodie">
+      <img src="https://imgur.com/8AYoYZd.png" alt="Hoodie">
       <h3>Signature Hoodie</h3>
       <p>Luxury fleece. Embroidered logo. Ultimate comfort.</p>
       <p class="price">RM179</p>
