--- a/index.html
+++ b/index.html
@@ -2,85 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Lemongrass Island</title>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300;600&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Urbanist', sans-serif;
-      background-color: #f9f9f9;
-      color: #222;
-    }
-    header {
-      background-color: #000;
-      color: white;
-      padding: 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    header img {
-      height: 50px;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 15px;
-    }
-    .hero {
-      background: url('https://i.imgur.com/Wuy8kFI.jpg') no-repeat center center/cover;
-      padding: 100px 20px;
-      text-align: center;
-      color: white;
-    }
-    .section {
-      padding: 50px 20px;
-      max-width: 1100px;
-      margin: auto;
-    }
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-    }
-    .product-card {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      padding: 20px;
-      text-align: center;
-    }
-    .product-card img {
-      width: 100%;
-      border-radius: 8px;
-    }
-    .btn {
-      display: inline-block;
-      background: #000;
-      color: white;
-      padding: 10px 20px;
-      margin-top: 10px;
-      border-radius: 8px;
-      text-decoration: none;
-    }
-    .size-stock {
-      margin: 10px 0;
-      font-size: 14px;
-      color: #444;
-    }
-    footer {
-      background: #000;
-      color: white;
-      text-align: center;
-      padding: 20px;
-    }
-  </style>
 </head>
 <body>
   <header>
-    <img src="https://i.imgur.com/8kzPIwY.png" alt="Lemongrass Island Logo">
+    <img src="logo-white.png" alt="Lemongrass Logo" class="logo"/>
     <nav>
       <a href="#shop">Shop</a>
       <a href="#about">About</a>
@@ -90,7 +19,7 @@
   </header>
 
   <div class="hero">
-    <h1>Luxury Streetwear for Modern Souls</h1>
+    <h2>Luxury Streetwear for Modern Souls</h2>
     <p>Crafted with identity. Inspired by nature. Rooted in culture.</p>
   </div>
 
@@ -98,20 +27,43 @@
     <h2>Our Products</h2>
     <div class="products">
       <div class="product-card">
-        <img src="https://i.imgur.com/l4lGJDi.png" alt="T-shirt Lemongrass">
+        <div class="image-slider">
+          <img src="tshirt-front.png" class="slider-img active">
+          <img src="tshirt-back.png" class="slider-img">
+        </div>
         <h3>Classic T-Shirt</h3>
         <p>Premium heavyweight cotton. Bold design.</p>
-        <div class="size-stock">Size: S, M, L, XL | Stock: 20 pcs</div>
-        <p><strong>RM89</strong></p>
-        <a href="https://toyyibpay.com/link-bayaran-tshirt" class="btn">Pre-Order Now</a>
+        <p><strong>Harga: RM89</strong></p>
+        <label>Saiz:
+          <select onchange="updateStock(this, 'tshirt')">
+            <option value="S">S</option>
+            <option value="M">M</option>
+            <option value="L">L</option>
+            <option value="XL">XL</option>
+          </select>
+        </label>
+        <p class="stock" id="stock-tshirt">Stok: -</p>
+        <a href="https://toyyibpay.com/link-bayaran-tshirt" class="btn" target="_blank">Pre-Order & Bayar</a>
       </div>
+
       <div class="product-card">
-        <img src="https://i.imgur.com/kwHD7cU.png" alt="Hoodie Lemongrass">
+        <div class="image-slider">
+          <img src="hoodie-front.png" class="slider-img active">
+          <img src="hoodie-back.png" class="slider-img">
+        </div>
         <h3>Signature Hoodie</h3>
         <p>Luxury fleece. Embroidered logo. Ultimate comfort.</p>
-        <div class="size-stock">Size: M, L, XL | Stock: 10 pcs</div>
-        <p><strong>RM179</strong></p>
-        <a href="https://toyyibpay.com/link-bayaran-hoodie" class="btn">Pre-Order Now</a>
+        <p><strong>Harga: RM179</strong></p>
+        <label>Saiz:
+          <select onchange="updateStock(this, 'hoodie')">
+            <option value="S">S</option>
+            <option value="M">M</option>
+            <option value="L">L</option>
+            <option value="XL">XL</option>
+          </select>
+        </label>
+        <p class="stock" id="stock-hoodie">Stok: -</p>
+        <a href="https://toyyibpay.com/link-bayaran-hoodie" class="btn" target="_blank">Pre-Order & Bayar</a>
       </div>
     </div>
   </section>
@@ -122,7 +74,7 @@
   </section>
 
   <section class="section" id="preorder">
-    <h2>Pre-Order Form</h2>
+    <h2>Pre-Order</h2>
     <p>Secure your limited pieces now. Fill out the form and we’ll get in touch!</p>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeExampleFormURL/viewform?embedded=true" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </section>
@@ -130,12 +82,14 @@
   <section class="section" id="contact">
     <h2>Contact Us</h2>
     <p>Instagram: <a href="https://instagram.com/lemongrassisland_official" target="_blank">@lemongrassisland_official</a></p>
-    <p>Email: officiallemongrassisland@gmail.com</p>
+    <p>Email: lemongrassisland@gmail.com</p>
     <p>WhatsApp: <a href="https://wa.me/60137007539" target="_blank">+60 13-700 7539</a></p>
   </section>
 
   <footer>
     <p>&copy; 2025 Lemongrass Island. All rights reserved.</p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
