--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <img src="logo-white.png" alt="Lemongrass Logo" class="logo"/>
+    <img src=".https://imgur.com/rnsT2QW.png" alt="Lemongrass Logo" class="logo"/>
     <nav>
       <a href="#shop">Shop</a>
       <a href="#about">About</a>
@@ -28,8 +28,8 @@
     <div class="products">
       <div class="product-card">
         <div class="image-slider">
-          <img src="tshirt-front.png" class="slider-img active">
-          <img src="tshirt-back.png" class="slider-img">
+          <img src="https://imgur.com/NBg3gai.png" class="slider-img active">
+          <img src="https://imgur.com/S1KzW0B.png" class="slider-img">
         </div>
         <h3>Classic T-Shirt</h3>
         <p>Premium heavyweight cotton. Bold design.</p>
@@ -48,8 +48,8 @@
 
       <div class="product-card">
         <div class="image-slider">
-          <img src="hoodie-front.png" class="slider-img active">
-          <img src="hoodie-back.png" class="slider-img">
+          <img src="https://imgur.com/2UjaGBY.png" class="slider-img active">
+          <img src="https://imgur.com/73LuUzy.png" class="slider-img">
         </div>
         <h3>Signature Hoodie</h3>
         <p>Luxury fleece. Embroidered logo. Ultimate comfort.</p>
