--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <header>
   <div class="logo">
-    <img src="logo.png" alt="Lemongrass Island Logo">
+    <img src="https://imgur.com/rnsT2QW.png" alt="Lemongrass Island Logo">
   </div>
   <nav>
     <a href="#home">Home</a>
@@ -36,8 +36,8 @@
   <div class="products">
     <div class="product-card" data-id="1">
       <div class="product-slider">
-        <img src="tshirt1.png" alt="T-shirt Front">
-        <img src="tshirt2.png" alt="T-shirt Back" class="hidden">
+        <img src="https://imgur.com/S1KzW0B.png" alt="T-shirt Front">
+        <img src="https://imgur.com/NBg3gai.png" alt="T-shirt Back" class="hidden">
       </div>
       <h3>Classic T-Shirt</h3>
       <p>Premium heavyweight cotton. Bold design.</p>
@@ -54,8 +54,8 @@
 
     <div class="product-card" data-id="2">
       <div class="product-slider">
-        <img src="hoodie1.png" alt="Hoodie Front">
-        <img src="hoodie2.png" alt="Hoodie Back" class="hidden">
+        <img src="https://imgur.com/73LuUzy.png" alt="Hoodie Front">
+        <img src="https://imgur.com/2UjaGBY.png" alt="Hoodie Back" class="hidden">
       </div>
       <h3>Signature Hoodie</h3>
       <p>Luxury fleece. Embroidered logo. Ultimate comfort.</p>
