--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </section>
 
 <footer>
-  <p>&copy; 2025 Lemongrass Island. All rights reserved.</p>
+  <p>© 2025 Lemongrass Island. All rights reserved.</p>
 </footer>
 
 <div class="cart-overlay hidden" id="cart">
