--- a/index.html
+++ b/index.html
@@ -1,100 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ms">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Lemongrass Island</title>
-  <link rel="stylesheet" href="styles.css">
-  <script defer src="script.js"></script>
-  <link rel="icon" href="logo.png" type="image/png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lemongrass Island</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- HEADER -->
+    <header class="header">
+        <h1 class="logo">Lemongrass Island</h1>
+        <nav>
+            <ul>
+                <li><a href="#" id="cart-icon">Cart (<span id="cart-count">0</span>)</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<header>
-  <div class="logo">
-    <img src="https://imgur.com/rnsT2QW.png" alt="Lemongrass Island Logo">
-  </div>
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#shop">Shop</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
-    <a href="#cart" class="cart-btn">Cart (<span id="cart-count">0</span>)</a>
-  </nav>
-</header>
+    <!-- HERO SECTION -->
+    <section class="hero">
+        <h2>Welcome to Lemongrass Island</h2>
+    </section>
 
-<section class="hero" id="home">
-  <div class="hero-content">
-    <h1>Luxury Streetwear for Modern Souls</h1>
-    <p>Crafted with identity. Inspired by nature. Rooted in culture.</p>
-    <a href="#shop" class="btn">Shop Now</a>
-  </div>
-</section>
+    <!-- PRODUCT LIST -->
+    <main>
+        <section class="products">
+            <div class="product-card" data-name="Product 1" data-price="29.90">
+                <div class="image-container">
+                    <img src="front1.jpg" alt="Product 1 Front" class="front-img">
+                    <img src="back1.jpg" alt="Product 1 Back" class="back-img">
+                </div>
+                <h3>Product 1</h3>
+                <p>Price: RM29.90</p>
+                <button class="btn add-to-cart">Add to Cart</button>
+            </div>
+            <div class="product-card" data-name="Product 2" data-price="45.00">
+                <div class="image-container">
+                    <img src="front2.jpg" alt="Product 2 Front" class="front-img">
+                    <img src="back2.jpg" alt="Product 2 Back" class="back-img">
+                </div>
+                <h3>Product 2</h3>
+                <p>Price: RM45.00</p>
+                <button class="btn add-to-cart">Add to Cart</button>
+            </div>
+            <div class="product-card" data-name="Product 3" data-price="15.50">
+                <div class="image-container">
+                    <img src="front3.jpg" alt="Product 3 Front" class="front-img">
+                    <img src="back3.jpg" alt="Product 3 Back" class="back-img">
+                </div>
+                <h3>Product 3</h3>
+                <p>Price: RM15.50</p>
+                <button class="btn add-to-cart">Add to Cart</button>
+            </div>
+            <!-- Tambah lagi produk jika perlu -->
+        </section>
+    </main>
 
-<section id="shop" class="section">
-  <h2>Our Products</h2>
-  <div class="products">
-    <div class="product-card" data-id="1">
-      <div class="product-slider">
-        <img src="https://imgur.com/S1KzW0B.png" alt="T-shirt Front">
-        <img src="https://imgur.com/NBg3gai.png" alt="T-shirt Back" class="hidden">
-      </div>
-      <h3>Classic T-Shirt</h3>
-      <p>Premium heavyweight cotton. Bold design.</p>
-      <p><strong>RM89</strong></p>
-      <p>Stock: <span class="stock">20</span></p>
-      <select class="size">
-        <option value="S">S</option>
-        <option value="M">M</option>
-        <option value="L">L</option>
-        <option value="XL">XL</option>
-      </select>
-      <button class="add-to-cart">Add to Cart</button>
+    <!-- CART OVERLAY -->
+    <div id="cart-overlay" class="cart-overlay hidden">
+        <div class="cart-modal">
+            <span id="close-cart" class="close">&times;</span>
+            <h2>Shopping Cart</h2>
+            <div id="cart-items" class="cart-items">
+                <!-- Item akan ditambah di sini oleh JavaScript -->
+            </div>
+            <button id="checkout-btn" class="btn">Checkout</button>
+        </div>
     </div>
 
-    <div class="product-card" data-id="2">
-      <div class="product-slider">
-        <img src="https://imgur.com/73LuUzy.png" alt="Hoodie Front">
-        <img src="https://imgur.com/2UjaGBY.png" alt="Hoodie Back" class="hidden">
-      </div>
-      <h3>Signature Hoodie</h3>
-      <p>Luxury fleece. Embroidered logo. Ultimate comfort.</p>
-      <p><strong>RM179</strong></p>
-      <p>Stock: <span class="stock">10</span></p>
-      <select class="size">
-        <option value="M">M</option>
-        <option value="L">L</option>
-        <option value="XL">XL</option>
-      </select>
-      <button class="add-to-cart">Add to Cart</button>
-    </div>
-  </div>
-</section>
-
-<section id="about" class="section">
-  <h2>About Us</h2>
-  <p>Lemongrass Island is more than just a brand — it's where luxury meets identity, culture, and modern relevance.</p>
-</section>
-
-<section id="contact" class="section">
-  <h2>Contact</h2>
-  <p>Email: officiallemongrassisland@gmail.com</p>
-  <p>Instagram: <a href="https://instagram.com/lemongrassisland_official" target="_blank">@lemongrassisland_official</a></p>
-  <p>WhatsApp: <a href="https://wa.me/60137007539" target="_blank">+60 13-700 7539</a></p>
-</section>
-
-<footer>
-  <p>© 2025 Lemongrass Island. All rights reserved.</p>
-</footer>
-
-<div class="cart-overlay hidden" id="cart">
-  <div class="cart-content">
-    <h2>Your Cart</h2>
-    <ul id="cart-items"></ul>
-    <button id="checkout">Checkout</button>
-    <button id="close-cart">Close</button>
-  </div>
-</div>
-
+    <script src="script.js"></script>
 </body>
 </html>
