--- a/index.html
+++ b/index.html
@@ -1,73 +1,32 @@
 <!DOCTYPE html>
-<html lang="ms">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lemongrass Island</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lemongrass Island</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- HEADER -->
-    <header class="header">
-        <h1 class="logo">Lemongrass Island</h1>
-        <nav>
-            <ul>
-                <li><a href="#" id="cart-icon">Cart (<span id="cart-count">0</span>)</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- HERO SECTION -->
-    <section class="hero">
-        <h2>Welcome to Lemongrass Island</h2>
-    </section>
-
-    <!-- PRODUCT LIST -->
-    <main>
-        <section class="products">
-            <div class="product-card" data-name="Product 1" data-price="29.90">
-                <div class="image-container">
-                    <img src="front1.jpg" alt="Product 1 Front" class="front-img">
-                    <img src="back1.jpg" alt="Product 1 Back" class="back-img">
-                </div>
-                <h3>Product 1</h3>
-                <p>Price: RM29.90</p>
-                <button class="btn add-to-cart">Add to Cart</button>
-            </div>
-            <div class="product-card" data-name="Product 2" data-price="45.00">
-                <div class="image-container">
-                    <img src="front2.jpg" alt="Product 2 Front" class="front-img">
-                    <img src="back2.jpg" alt="Product 2 Back" class="back-img">
-                </div>
-                <h3>Product 2</h3>
-                <p>Price: RM45.00</p>
-                <button class="btn add-to-cart">Add to Cart</button>
-            </div>
-            <div class="product-card" data-name="Product 3" data-price="15.50">
-                <div class="image-container">
-                    <img src="front3.jpg" alt="Product 3 Front" class="front-img">
-                    <img src="back3.jpg" alt="Product 3 Back" class="back-img">
-                </div>
-                <h3>Product 3</h3>
-                <p>Price: RM15.50</p>
-                <button class="btn add-to-cart">Add to Cart</button>
-            </div>
-            <!-- Tambah lagi produk jika perlu -->
-        </section>
-    </main>
-
-    <!-- CART OVERLAY -->
-    <div id="cart-overlay" class="cart-overlay hidden">
-        <div class="cart-modal">
-            <span id="close-cart" class="close">&times;</span>
-            <h2>Shopping Cart</h2>
-            <div id="cart-items" class="cart-items">
-                <!-- Item akan ditambah di sini oleh JavaScript -->
-            </div>
-            <button id="checkout-btn" class="btn">Checkout</button>
-        </div>
+  <header>
+    <div class="logo">Lemongrass Island</div>
+    <nav id="nav-links">
+      <a href="#home">Home</a>
+      <a href="#shop">Shop</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
+    <div class="hamburger" id="hamburger-menu">
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
+  </header>
 
-    <script src="script.js"></script>
+  <section class="hero" id="home">
+    <h1>Welcome to Lemongrass Island</h1>
+    <p>Luxury Streetwear for Modern Souls</p>
+  </section>
+
+  <script src="script.js"></script>
 </body>
 </html>
