--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <img src="images/logo.png" alt="Lemongrass Island Logo" class="logo">
+    <img src="https://imgur.com/rnsT2QW.png" alt="Lemongrass Island Logo" class="logo">
     <nav>
       <ul>
         <li><a href="#product-list">Produk</a></li>
